gke_project/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dwk-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              serviceName: todo-app-frontend-svc
              servicePort: 5000
          - path: /api
            pathType: Prefix
            backend:
              serviceName: todo-app-backend-svc
              servicePort: 5600
